GitHubからユーザ名を取得して表示する機能を追加

--- a/example2/Podfile
+++ b/example2/Podfile
@@ -9,6 +9,7 @@ target 'example2' do
   
   pod 'RealmSwift'
   pod 'Alamofire'
+  pod 'SwiftyJSON'
 
   target 'example2Tests' do
     inherit! :search_paths
